--- a/src/app/addpage/addpage.component.html
+++ b/src/app/addpage/addpage.component.html
@@ -5,6 +5,16 @@
       <h2>Scan a New Product</h2>
     </div>
     <div class="card-body">
+      <label for="productImage">Ingredients label</label>
+      <div class="text-center mb-3">
+        <img id="productImage"
+             class="border p-2 rounded border-secondary border-4"
+             [src]="imageURI"
+             (click)="imgCapture_click()"
+             alt="add an image or take a picture"
+             width="100"
+             height="100"/>
+      </div>
       <form #productForm="ngForm">
         <div class="mb-3">
           <label for="txtproductName">Product Name</label>
@@ -17,30 +27,44 @@
                  required
           >
           <div *ngIf="productName.invalid && (productName.dirty || productName.touched)">
-            <small *ngIf="productName.errors && productName.errors['required']" class="text-danger">Product name is required</small>
+            <small *ngIf="productName.errors && productName.errors['required']"
+                   class="text-danger">Product name is required</small>
           </div>
         </div>
 
         <div class="mb-3">
           <label for="txaIngredientsList">Ingredients</label>
-          <textarea name="txaIngredientsList" id="txaIngredientsList" class="form-control"
-          [(ngModel)]="product.ingredientsList"
+          <textarea name="txaIngredientsList"
+                    id="txaIngredientsList"
+                    class="form-control"
+                    [(ngModel)]="product.ingredientsList"
                     #ingredientsList="ngModel"
-          required
+                    required
           ></textarea>
           <div *ngIf="ingredientsList.invalid && (ingredientsList.dirty || ingredientsList.touched)">
-            <small *ngIf="ingredientsList.errors && ingredientsList.errors['required']" class="text-danger">Ingredients are required</small>
+            <small *ngIf="ingredientsList.errors && ingredientsList.errors['required']"
+                   class="text-danger">Ingredients are required</small>
           </div>
         </div>
 
         <div class="mb-2">
           <button type="button"
-                  id="btnAdd"
+                  *ngIf="userID != -1; else addProductButton"
+                  id="btnScan"
                   class="btn btn-primary"
                   [disabled]="productForm.invalid"
                   (click)="btnScan_click()">Scan product
           </button>
-          <a routerLink="/show" class="ms-3 btn btn-danger">Cancel</a>
+          <ng-template #addProductButton>
+            <button type="button"
+                    id="btnAdd"
+                    class="btn btn-primary"
+                    [disabled]="productForm.invalid"
+                    (click)="btnAdd_click()">Add product
+            </button>
+          </ng-template>
+          <a routerLink="/show"
+             class="ms-3 btn btn-danger">Cancel</a>
         </div>
       </form>
     </div>
