--- a/src/app/dietlistpage/dietlistpage.component.html
+++ b/src/app/dietlistpage/dietlistpage.component.html
@@ -3,14 +3,24 @@
     <div class="card-header text-center">
       <h1>What we Scan For</h1>
     </div>
-    <div class="accordion" id="accordionExample">
+    <div class="accordion"
+         id="accordionExample">
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <h2 class="accordion-header"
+            id="headingOne">
+          <button class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne">
             Gluten Ingredients
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+        <div id="collapseOne"
+             class="accordion-collapse collapse show"
+             aria-labelledby="headingOne"
+             data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <ul>
               <li *ngFor="let ingredient of glutenIngredients">{{ingredient}}</li>
@@ -19,12 +29,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <h2 class="accordion-header"
+            id="headingTwo">
+          <button class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo">
             Dairy Ingredients
           </button>
         </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+        <div id="collapseTwo"
+             class="accordion-collapse collapse"
+             aria-labelledby="headingTwo"
+             data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <ul>
               <li *ngFor="let ingredient of dairyIngredients">{{ingredient}}</li>
@@ -33,12 +52,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <h2 class="accordion-header"
+            id="headingThree">
+          <button class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree">
             Treenut Ingredients
           </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+        <div id="collapseThree"
+             class="accordion-collapse collapse"
+             aria-labelledby="headingThree"
+             data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <ul>
               <li *ngFor="let ingredient of treenutIngredients">{{ingredient}}</li>
@@ -47,12 +75,21 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingFour">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <h2 class="accordion-header"
+            id="headingFour">
+          <button class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour">
             Peanut Ingredients
           </button>
         </h2>
-        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+        <div id="collapseFour"
+             class="accordion-collapse collapse"
+             aria-labelledby="headingFour"
+             data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <ul>
               <li *ngFor="let ingredient of peanutIngredients">{{ingredient}}</li>
@@ -61,18 +98,33 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingFive">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+        <h2 class="accordion-header"
+            id="headingFive">
+          <button class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive"
+                  aria-expanded="false"
+                  aria-controls="collapseFive">
             Custom Ingredients
           </button>
         </h2>
-        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+        <div id="collapseFive"
+             class="accordion-collapse collapse"
+             aria-labelledby="headingFive"
+             data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <ul>
               <li *ngFor="let ingredient of customIngredients">{{ingredient}}</li>
             </ul>
-            <button id="btnAddCustomIngredient" class="btn btn-success col-6" (click)="btnAddCustomIngredient_click()">New Custom Ingredient</button>
-            <button id="btnEditCustomIngredients" class="btn btn-primary col-6" (click)="btnEditCustomIngredients_click()">Edit Custom Ingredients</button>
+            <button id="btnAddCustomIngredient"
+                    class="btn btn-success col-6"
+                    (click)="btnAddCustomIngredient_click()">New Custom Ingredient
+            </button>
+            <button id="btnEditCustomIngredients"
+                    class="btn btn-primary col-6"
+                    (click)="btnEditCustomIngredients_click()">Edit Custom Ingredients
+            </button>
           </div>
         </div>
       </div>
